# routes/auth.ts
@@ -6,17 +6,21 @@ const auth = require('../controllers/auth')
 
 const routes: Router = require('express').Router()
 
-routes.get('/login', auth.login)
+routes.get('/auth/login', auth.login)
 
-routes.get('/logout', auth.logout)
+routes.get('/auth/logout', auth.logout)
 
-routes.get('/google', passport.authenticate('google', {
+routes.get('/auth/google', passport.authenticate('google', {
   scope: ['profile'],
-}))
+})
+  // #swagger.summary = "This endpoint handles OAuth authentication with Google."  
+)
 
-routes.get('/google/redirect', passport.authenticate('google', {
+routes.get('/auth/google/redirect', passport.authenticate('google', {
   successRedirect: '/posts',
   failureRedirect: '/auth/login',
-}))
+})
+  // #swagger.summary = "This endpoint handles the redirection following OAuth authentication with Google."
+)
 
 module.exports = routes;
